Bug fixes: Remove service badges, update heading colors to green, update blog dates, add Services page, update footer logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/assets/images/RTLYNX_LOGO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RTLYNX - Semiconductor & Advanced Technology Product Design Services</title>
+    <title>RTLYNX - AI Agentic Systems Engineering</title>
   </head>
   <body>
     <div id="root"></div>
